replace homepage link

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/mahlanguterrance/ngTest2",
+  "homepage": "https://mahlanguterrance.github.io/ngTest2/",
   "name": "ng-restful-app",
   "version": "0.0.0",
   "scripts": {
